# Test-Technique-Senior-Data-Scientist-2025

./: .gitignore  LICENCE  RAG_SYSTEM_EXPLANATION.md  README.md  ask_llm.py  bm25_retriever.py  clustering.py  config.py  config_manager.py  defaults.py  dense_retriever.py  embedding.py  mmr.py  ollama_client.py  pipeline.py  print_utils.py  process_data.py  prompts.py  pyproject.toml  question_expansion.py  rerank.py  setup.sh  test_llm.py
config/: config.yaml  config_dev.yaml
data/: corpus.csv
